# rules_nodejs_sh_wrapper_repro

./: README.md  WORKSPACE  package.json
app/: BUILD.bazel  app.js
